# tui-crux-example

./: Cargo.toml  README.md  rust-toolchain.toml
shared/: Cargo.toml
shared/src/: app.rs
tui/: Cargo.toml
tui/src/: main.rs
